--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+/* src/App.css */
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  min-height: 100vh; /* Ensure root covers at least the full height of the viewport */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app.light {
+  --bg-color: white;
+  --text-color: black;
+  --box-bg-color: #f1f1f1;
+  --box-text-color: black;
+  --box-hover-bg-color: #e0e0e0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app.dark {
+  --bg-color: #333;
+  --text-color: white;
+  --box-bg-color: #444;
+  --box-text-color: white;
+  --box-hover-bg-color: #555;
 }
 
-.App-link {
-  color: #61dafb;
+body, .app {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  min-height: calc(100vh - 56px); /* Adjust height based on the height of the navbar */
+  padding: 20px;
+  background-color: var(--bg-color); /* Applies the background color */
+  color: var(--text-color); /* Applies the text color */
+  transition: background-color 0.3s, color 0.3s;
 }
